# TS3-Matrix-Bridge

./: .gitignore  Dockerfile  pyproject.toml  start_bot.sh  ts3_bot.py
ts3_bot/: __main__.py  ts3_bot.py
